--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
         ports:
             - '5431:5432'
         environment:
-            POSTGRES_USER: backend
-            POSTGRES_PASSWORD: let-me-in
-            POSTGRES_DB: database
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+        volumes:
+            - postgres:/var/lib/postgresql/data
+volumes:
+    postgres:
